--- a/SIGNAL/cours.tex
+++ b/SIGNAL/cours.tex
@@ -56,4 +56,8 @@ Exam : Feuille A4 manuscrite \textbf{recto}. Attention démonstration de formule
 \section{Signaux et système}
 \subsection{Généralité}
 
+\underline{Nouveau cours du 28/10} \\
+Again note sur le poly.
+
+
 \end{document}
