--- a/MAPSI/TME/tme6/tme6.ipynb
+++ b/MAPSI/TME/tme6/tme6.ipynb
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1992/2439924595.py:7: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "/tmp/ipykernel_1096/2439924595.py:7: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
       "  X = np.array(data.get('letters')) # récupération des données sur les lettres\n"
      ]
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "        28.207161,  43.883423,  53.459026])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "       0], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        " array([55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65])]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "        [0.11382114, 0.06504065, 0.82113821]]))"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,12 +296,18 @@
     "    Pi = Pi / Pi.sum()\n",
     "    return Pi, A\n",
     "\n",
-    "d = 3                    # paramètre de discrétisation\n",
-    "Xd3 = discretise(X, d)    # application de la discrétisation\n",
+    "# Je garde Y et index comme variable globales\n",
+    "d = 3\n",
     "index = groupByLabel(Y)  # groupement des signaux par classe\n",
-    "models3 = []\n",
-    "for cl in range(len(np.unique(Y))): # parcours de toutes les classes et optimisation des modèles\n",
-    "    models3.append(learnMarkovModel(Xd3[index[cl]], d))\n",
+    "\n",
+    "def learn_models(X, d):\n",
+    "    Xd = discretise(X, d)    # application de la discrétisation\n",
+    "    models = []\n",
+    "    for cl in range(len(np.unique(Y))): # parcours de toutes les classes et optimisation des modèles\n",
+    "        models.append(learnMarkovModel(Xd3[index[cl]], d))\n",
+    "    return Xd, models\n",
+    "\n",
+    "Xd3, models3 = learn_models(X, d)\n",
     "models3[0]"
    ]
   },
@@ -329,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -481,16 +487,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2018/2959815715.py:2: RuntimeWarning: divide by zero encountered in log\n",
+      "/tmp/ipykernel_1096/2959815715.py:2: RuntimeWarning: divide by zero encountered in log\n",
       "  somme = np.log(Pi[s[0]])\n",
-      "/tmp/ipykernel_2018/2959815715.py:4: RuntimeWarning: divide by zero encountered in log\n",
+      "/tmp/ipykernel_1096/2959815715.py:4: RuntimeWarning: divide by zero encountered in log\n",
       "  somme += np.log(A[s[i-1], s[i]])\n"
      ]
     },
@@ -506,7 +512,7 @@
        "               -inf, -12.48285678])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,16 +559,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2018/2959815715.py:2: RuntimeWarning: divide by zero encountered in log\n",
+      "/tmp/ipykernel_1096/2959815715.py:2: RuntimeWarning: divide by zero encountered in log\n",
       "  somme = np.log(Pi[s[0]])\n",
-      "/tmp/ipykernel_2018/2959815715.py:4: RuntimeWarning: divide by zero encountered in log\n",
+      "/tmp/ipykernel_1096/2959815715.py:4: RuntimeWarning: divide by zero encountered in log\n",
       "  somme += np.log(A[s[i-1], s[i]])\n"
      ]
     }
@@ -583,45 +589,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.914179104477612"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# calcul d'une version numérique des Y :\n",
-    "Ynum = np.zeros(Y.shape)\n",
-    "for num, char in enumerate(np.unique(Y)):\n",
-    "    Ynum[Y == char] = num\n",
-    "    \n",
-    "# Calcul de la classe la plus probable :\n",
-    "pred = proba.argmax(0) # max colonne par colonne\n",
-    "\n",
-    "# Calcul d'un pourcentage de bonne classification :\n",
-    "np.where(pred != Ynum, 0.,1.).mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2018/2959815715.py:2: RuntimeWarning: divide by zero encountered in log\n",
+      "/tmp/ipykernel_1096/2959815715.py:2: RuntimeWarning: divide by zero encountered in log\n",
       "  somme = np.log(Pi[s[0]])\n",
-      "/tmp/ipykernel_2018/2959815715.py:4: RuntimeWarning: divide by zero encountered in log\n",
+      "/tmp/ipykernel_1096/2959815715.py:4: RuntimeWarning: divide by zero encountered in log\n",
+      "  somme += np.log(A[s[i-1], s[i]])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.914179104477612"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def predict(Xd, models):\n",
+    "    \"\"\"\n",
+    "    Xd : X discretisé et le models appris\n",
+    "    \"\"\"\n",
+    "    proba = np.array([[probaSequence(Xd[i], models[cl][0], models[cl][1]) for i in range(len(Xd))]\n",
+    "                    for cl in range(len(np.unique(Y)))])\n",
+    "    \n",
+    "    # Calcul de la classe la plus probable :\n",
+    "    pred = proba.argmax(0) # max colonne par colonne\n",
+    "    return pred\n",
+    "\n",
+    "def eval(Y_hat, Y_num):\n",
+    "    \"\"\"Calcul d'un pourcentage de bonne classification\"\"\"\n",
+    "    return np.where(Y_hat != Y_num, 0.,1.).mean()\n",
+    "\n",
+    "# calcul d'une version numérique des Y :\n",
+    "Ynum = np.zeros(Y.shape) \n",
+    "for num, char in enumerate(np.unique(Y)):\n",
+    "    Ynum[Y == char] = num"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pour `d=20`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1096/2959815715.py:4: RuntimeWarning: divide by zero encountered in log\n",
+      "  somme += np.log(A[s[i-1], s[i]])\n",
+      "/tmp/ipykernel_1096/2959815715.py:2: RuntimeWarning: divide by zero encountered in log\n",
+      "  somme = np.log(Pi[s[0]])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.041044776119402986"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval(predict(*learn_models(X, 20)), Ynum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pour `d=3`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1096/2959815715.py:2: RuntimeWarning: divide by zero encountered in log\n",
+      "  somme = np.log(Pi[s[0]])\n",
+      "/tmp/ipykernel_1096/2959815715.py:4: RuntimeWarning: divide by zero encountered in log\n",
       "  somme += np.log(A[s[i-1], s[i]])\n"
      ]
     },
@@ -631,24 +700,13 @@
        "0.6902985074626866"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "proba = np.array([[probaSequence(Xd3[i], models3[cl][0], models3[cl][1]) for i in range(len(Xd3))]\n",
-    "                for cl in range(len(np.unique(Y)))])\n",
-    "# calcul d'une version numérique des Y :\n",
-    "Ynum = np.zeros(Y.shape)\n",
-    "for num, char in enumerate(np.unique(Y)):\n",
-    "    Ynum[Y == char] = num\n",
-    "    \n",
-    "# Calcul de la classe la plus probable :\n",
-    "pred = proba.argmax(0) # max colonne par colonne\n",
-    "\n",
-    "# Calcul d'un pourcentage de bonne classification :\n",
-    "np.where(pred != Ynum, 0.,1.).mean()"
+    "eval(predict(*learn_models(X, 3)), Ynum)"
    ]
   },
   {
