--- a/BIMA/TME/TME1/TME1.ipynb
+++ b/BIMA/TME/TME1/TME1.ipynb
@@ -189,7 +189,7 @@
     }
    ],
    "source": [
-    "K = np.arange(12)).reshape((3,4))\n",
+    "K = np.arange(12).reshape((3,4))\n",
     "print(K)\n",
     "print(np.reshape(K,(12)))\n",
     "print(K.reshape((2,2,3)))"
