--- a/LRC/Fiches/Fiche_from_TD.tex
+++ b/LRC/Fiches/Fiche_from_TD.tex
@@ -67,6 +67,7 @@
     \item Feuille fermé $ \Leftrightarrow $ contradiction entre atome, 
     \item Feuille ouverte = une solution, ce qui n'est pas précisé dans la feuille est supposé vrais
     \item \textbf{Si toute les feuilles de l'arbre sont fermées alors $ F $ unsat} $ \Leftrightarrow $ \textbf{Une feuille ouverte $\rightarrow F$ satisfiable}
+    \item Indiquer quelle règle on utilise sur le coté.
 \end{itemize}
 
 \section{Système de Hilbert}
