--- a/LRC/Fiches/Fiche_from_TD.tex
+++ b/LRC/Fiches/Fiche_from_TD.tex
@@ -76,6 +76,7 @@
     \item S'entrainer ! TME1, exo3-4
     \item On a : 3 axiomes + Modus Ponens
     \item Théorème de la déduction : $ A_1, \dots, A_n \models B \Leftrightarrow A_1, \dots, A_{n-1} \models A_n \to B$ 
+    \item Les HP de départ sont déduite à partir du théorème de la déduction : on passe tout à gauche pour n'avoir plus qu'un atome à droite et bim voilà nos HP de départ. Par exemple : $ \models (P \to Q) \to ((Q \to R) \to (P \to R)) $ devient $ (P \to Q), (Q \to R), P \models R  $  
 \end{itemize}
 
 \subsection{Traduction d'énoncé en Hilbert}
@@ -86,6 +87,8 @@
 \section{Logique du première ordre}
 \begin{itemize}
     \item Définition d'un modèle : fonction($ \left| M \right| \to \left| M \right|  $ ) + prédicat ($ \left| M \right| \to  $ vrais/faux)
+    \item Lors de la traduction d'énoncé en LPPO, c'est pas mal de garder des $ \forall, \exists  $ à l'intérieur de la clause, ça permet de la simplifier pas mal finalement
+    \item Dans l'annale ils se sont pas fait chier sur ça, je cherchais compliqué alors que c'était simple 
 \end{itemize}
 
 \subsection{Preuve par résolution}
@@ -134,8 +137,8 @@ Définition d'une clause :
         F_3 &= \forall x, \forall y, \exists z (\neg R(x,y) R(x,z) \wedge R(z,y))
     \end{align*}
     Devient \begin{align*}
-        F_1 &= \forall X, R(X, f(X))
-        F_2 &= \forall Y, R(x_0, Y)
+        F_1 &= \forall X, R(X, f(X)) \\
+        F_2 &= \forall Y, R(x_0, Y) \\
         F_3 &= \begin{cases}
         \neg R(X,Y) \vee R(X, g(X,Y)) \\
         \neg R(X,Y) \vee R(g(X,Y), Y) \\
@@ -159,17 +162,25 @@ Définition d'une clause :
 \section{Logique de description}
 \subsection{$ \mathcal{FL}^- $ }
 \begin{itemize}
-    \item \textbf{S'entrainer pas compris} TD3
+    \item \textbf{S'entrainer pas compris} TD3 $\rightarrow$ Ca va en faite
     \item TBox : Concept atomique $ C \equiv D $, $ C \subseteq D \Leftrightarrow \forall x, C(x) \to D(x)$ 
     \item ABox : $ a : C, <a,b> : Role $ 
     \item Grammaire : pas de variable lol
+    \item Bien utiliser les définition de $ \exists , \forall  $ \begin{align*}
+        \exists R &= \{x \in \Delta | \exists y, (x,y) \in R\} \\
+        \forall R.C &= \{x \in \Delta | \forall y, (x,y) \in R \to y \in C \}
+    \end{align*}
 \end{itemize}
 \subsection{$ \mathcal{ALC} $ }
 \begin{itemize}
-    \item \textbf{S'entrainer RIEN RIEN compris} TD3
+    \item \textbf{S'entrainer RIEN RIEN compris} TD3 $\rightarrow$ Ca va en faite
     \item Same de $ \mathcal{FL}^- $ plus : 
     \item $ \exists R.C $ toujours role + concept atomique 
     \item $ \neg , \bot , \top  $ autorisé $\rightarrow$ Pratique
+    \item Bien utiliser les définition de $ \exists , \forall  $ \begin{align*}
+        \exists R.C &= \{x \in \Delta | \exists y, (x,y) \in R \wedge y \in C\} \\
+        \forall R.C &= \{x \in \Delta | \forall y, (x,y) \in R \to y \in C\} \text{ (comme } \mathcal{FL}^- \text{)}
+    \end{align*}
 \end{itemize}
 
 \subsection{Interprétation}
